--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="@dimen/default_margin"
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/greetings_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/greetings" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.button.MaterialButton
+        style="@style/my_button"
+        android:layout_width="match_parent"
+        android:text="@string/ok_button"
+        tools:text="OLOLO" />
+
+    <com.google.android.material.button.MaterialButton
+        style="@style/my_button"
+        android:layout_width="match_parent"
+        android:text="@string/ok_button"
+        tools:text="sdjkfbdaljkfnb" />
+
+    <com.google.android.material.button.MaterialButton
+        style="@style/my_button"
+        android:layout_width="match_parent"
+        android:text="@string/ok_button" />
+
+    <com.google.android.material.button.MaterialButton
+        style="@style/my_button"
+        android:layout_width="match_parent"
+        android:text="@string/ok_button" />
+
+</LinearLayout>
